[package]
name = "stb_truetype_rust"
version = "1.26.2"
authors = ["StbRust Team"]
description = "Rust port of the stb_truetype"
repository = "https://github.com/StbRust/stb_truetype_rust"
keywords = ["ttf", "truetype"]
license = "Unlicense"

[unstable]
build-std = ["core", "alloc"]

[dependencies]
obfstr = { version = "*", git = "https://github.com/SesameOne-Software/obfstr.git" }
libm = "0.2.7"
